Recommended products text change and local server setup

--- a/wp-content/themes/ebicla/templates/single-product.twig
+++ b/wp-content/themes/ebicla/templates/single-product.twig
@@ -207,7 +207,7 @@
 
                     <div id="related-products">
 
-                        <span class="title">Produse similare</span>
+                        <span class="title">Alti clienti au vizitat si...</span>
 
                         {% if function('count', similar_products) > 0 %}
 
