--- a/wp-content/themes/ebicla/css/top-menu.css
+++ b/wp-content/themes/ebicla/css/top-menu.css
@@ -44,6 +44,10 @@ nav.navbar.navbar-inverse.navbar-fixed-top.navbar-ebicla {
     background-color: #2b2b2b;
 }
 
+.navbar-ebicla.navbar-inverse .navbar-nav>li>a.active {
+    background-color: #2b2b2b;
+}
+
 .navbar-ebicla span.menu-text {
     font-size: 16px;
     margin: 0.5em;
