--- a/wp-content/themes/ebicla/css/top-menu.css
+++ b/wp-content/themes/ebicla/css/top-menu.css
@@ -281,3 +281,14 @@ nav.navbar.navbar-inverse.navbar-fixed-top.navbar-ebicla {
         float: left;
     }
 }
+
+a.js-push-btn.mobile-notifications {
+    float: right;
+    padding: 10px 15px;
+    margin: 7px 10px;
+    color: #fff;
+}
+
+a.js-push-btn.mobile-notifications.active {
+    background-color: #2b2b2b;
+}
