Changed the breadcrumbs for the terms page

--- a/wp-content/themes/ebicla/templates/terms.twig
+++ b/wp-content/themes/ebicla/templates/terms.twig
@@ -10,7 +10,7 @@
 
                     <div class="breadcrumb backslash">/</div>
 
-                    <div class="breadcrumb"><h2><a href="{{ function('get_permalink') }}" title="Politică de confidențialitate">Politică de confidențialitate</a></h2></div>
+                    <div class="breadcrumb"><h2><a href="{{ function('get_permalink') }}" title="{{ function('the_title') }}">{{ function('the_title') }}</a></h2></div>
 
                 </div>
 
